<resources>
    <string name="app_name">PORTAIL WINXO</string>
    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
    <string name="login_title">PORTAIL WINXO</string>
    <string name="title_activity_login">Connexion</string>
    <string name="Remember_me">Se souvenir de mon identifiant</string>
    <string name="action_sign_in">Connexion</string>
    <string name="loadingTxt">Chargement…</string>
    <string name="title_activity_main">APAG</string>
    <string name="prompt_username" translatable="false">Identifiant</string>
    <string name="presentation">Présentation</string>
    <string name="mentions_legales">Mentions lègales</string>
    <string name="reseaux_sociaux">Réseaux sociaux</string>
    <string name="not_connected">Vous n\'êtes pas connecté sur Internet.</string>
    <string name="biometric_subtitle">Connectez-vous à votre compte</string>
    <string name="profil_incomplet">Votre profil est incomplet. Vous devez complèter votre inscription.</string>
    <string name="update_btn">Mettre à jour</string>
    <string name="cancel_btn">Annuler</string>
    <string name="reessayer">Réessayer</string>
    <string name="developped_by_winxo_dsi">DEVELOPPED BY WINXO DSI</string>
    <string name="caution_changement_prix">Vos demandes de changements de prix doivent être impérativement saisies au plus tard une demi-heure avant la date et l\'heure d\'application. Le prochain changement de prix prévu est à :{proposalAppTime_txt}</string>
    <string name="prompt_code_station">Code station ex: 123</string>
    <string name="press_back_again_to_exit">Appuyez à nouveau pour quitter</string>
    <string name="validate_btn">Valider</string>
    <string name="update_password">Modifier mon mot de passe</string>
    <string name="password_irreverssible">* Merci de noter que le changement de mot de passe est une opération irréverssible.</string>
    <string name="password_irreverssible2">* Utilisez 6 caractères numériques. Ne choisissez pas un mot de passe que vous utilisez déjà sur un autre site ni un mot de passe qui soit trop évident tel que la date de notre naissance.</string>
    <string name="changement_d_informations">Pour tout changement d\'informations relatives au compte, merci de prendre attache avec le commercial ou le service informatique WINXO.</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="btn_01">APAG</string>
    <string name="btn_02">Commandes</string>
    <string name="btn_03">Interventions techniques</string>
    <string name="desc_btn_01">Gestion des Prix à Appliquer des Stations-services.</string>
    <string name="desc_btn_02">Gestion des Commandes.</string>
    <string name="desc_btn_03">Gestion des Tickets.</string>
    <string name="bientot_disponible">Ce module sera bientôt disponible.</string>
    <string name="dhttc_litre">DH TTC / Litre</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="need_help">Besoin d\'aide</string>
    <string name="gps_detail">Pour profiter de toutes les fonctionnalités du PORTAIL WINXO, activez la localisation GPS et autoriser le PORTAIL WINXO à accéder à votre position.</string>
    <string name="saisies_des_commandes_title">Pour des régles de gestion internes, des conditions de saisies des commandes ont été implémentées. Vous pouvez toute fois les consulter en cliquant ici.</string>
    <string name="cgv_title">Pour des régles de gestion internes, nous vous rappelons les conditions de saisies des commandes:</string>
    <string name="pour_toute_demande_d_information_vous_pouvez_nous_adresser_un_mail_sur">Pour toute demande d\'information, vous pouvez nous adresser un mail sur:</string>
    <string name="support_apag_winxo_com">support_apag@winxo.com</string>
    <string name="ou_contactez_nous_directement_sur">Ou contactez nous directement sur:</string>
    <string name="_212_522_424_300">+212 522 424 300</string>
    <string name="date">Date :</string>
    <string name="a_propos_de_l_application">A propos de l\'application</string>
    <string name="notre_site_internet">Notre site internet</string>
    <string name="facebook">Facebook</string>
</resources>
