<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".View.MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|start"
        android:scaleType="fitStart"
        android:src="@drawable/bg_menu_screen2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginTop="160dp">
        <RelativeLayout
            android:id="@+id/menu_btn_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconmenu01"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/btn_img_01_" />

            <TextView
                android:id="@+id/textmenu01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu01"
                android:layout_toRightOf="@+id/iconmenu01"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/btn_01"
                android:textColor="@color/text_like_counter"
                android:textSize="32sp"
                android:lineHeight="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu01"
                android:layout_toRightOf="@+id/iconmenu01"
                android:layout_below="@+id/textmenu01"
                android:text="@string/desc_btn_01"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_btn_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconmenu02"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/btn_img_02_" />
            <TextView
                android:id="@+id/textmenu02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu02"
                android:layout_toRightOf="@+id/iconmenu02"
                android:text="@string/btn_02"
                android:fontFamily="@font/bebas_neue"
                android:textColor="@color/text_like_counter"
                android:textSize="32sp"
                android:lineHeight="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu02"
                android:layout_toRightOf="@+id/iconmenu02"
                android:layout_below="@+id/textmenu02"
                android:text="@string/desc_btn_02"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_btn_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iconmenu03"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/btn_img_03_" />

            <TextView
                android:id="@+id/textmenu03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu03"
                android:layout_toRightOf="@+id/iconmenu03"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/btn_03"
                android:textColor="@color/text_like_counter"
                android:textSize="32sp"
                android:lineHeight="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/iconmenu03"
                android:layout_toRightOf="@+id/iconmenu03"
                android:layout_below="@+id/textmenu03"
                android:text="@string/desc_btn_03"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="15dp"
        app:fabCradleRoundedCornerRadius="50dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/b_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:outlineSpotShadowColor="@color/colorTransparent"
            app:elevation="0dp"
            app:itemIconTint="@color/colorBlue"
            app:itemTextColor="@color/colorBlue"
            app:menu="@menu/bottom_menu_home"
            tools:targetApi="p" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_black_24dp"
        android:tooltipText="Accueil"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="38dp"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>